--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 	<div class="page page1">
 		<video webkit-playsinline playsinline x5-video-player-type="h5" preload='auto' loop autoplay x-webkit-airplay="true" x5-video-player-fullscreen="true" id="video" controls>
-			<source src="video/1.mp4">
+			<source src="demo.mp4">
 		</video>
 
 	</div>
