--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
 	<div class="page page1">
-		<video webkit-playsinline playsinline x5-video-player-type="h5" preload='auto' loop autoplay x-webkit-airplay="true" x5-video-player-fullscreen="true" id="video" controls>
+		<video webkit-playsinline playsinline x5-video-player-type="h5" preload='true' loop autoplay x-webkit-airplay="true" x5-video-player-fullscreen="true" id="video" controls>
 			<source src="demo.mp4">
 		</video>
 
